src/passes/snapshots/lumina2__passes__cst_gen__test__external_function_return.snap
---
source: src/passes/cst_gen.rs
expression: extern fn some_function() -> u8;
---
ExternalFunction {
    tok_extern: Extern,
    signature: FunctionSignature {
        tok_fn: Fn,
        name: Ident(
            "some_function",
        ),
        tok_l_parenthesis: LParenthesis,
        parameters: PunctuatedList {
            items: [],
            punctuation: [],
        },
        tok_r_parenthesis: RParenthesis,
        return_ty: Some(
            FunctionReturnType {
                tok_thin_arrow: ThinArrow,
                ty: Named(
                    Ident(
                        "u8",
                    ),
                ),
            },
        ),
    },
    tok_semicolon: SemiColon,
}
