src/passes/snapshots/lumina2__passes__cst_gen__test__function_with_body.snap
---
source: src/passes/cst_gen.rs
expression: "fn some_function() { let a = 1; 1 + 2; }"
---
FunctionDeclaration {
    signature: FunctionSignature {
        tok_fn: Fn,
        name: Ident(
            "some_function",
        ),
        tok_l_parenthesis: LParenthesis,
        parameters: PunctuatedList {
            items: [],
            punctuation: [],
        },
        tok_r_parenthesis: RParenthesis,
        return_ty: None,
    },
    body: Block {
        tok_l_brace: LBrace,
        statements: [
            Let(
                LetStatement {
                    tok_let: Let,
                    variable: Ident(
                        "a",
                    ),
                    tok_eq: Eq,
                    value: Literal(
                        Integer(
                            IntegerLiteral(
                                IntegerLiteral(
                                    1,
                                ),
                            ),
                        ),
                    ),
                    tok_semicolon: SemiColon,
                },
            ),
            Expression(
                ExpressionStatement {
                    expression: Binary(
                        Binary {
                            lhs: Literal(
                                Integer(
                                    IntegerLiteral(
                                        IntegerLiteral(
                                            1,
                                        ),
                                    ),
                                ),
                            ),
                            operation: Plus(
                                Plus,
                            ),
                            rhs: Literal(
                                Integer(
                                    IntegerLiteral(
                                        IntegerLiteral(
                                            2,
                                        ),
                                    ),
                                ),
                            ),
                        },
                    ),
                    tok_semicolon: Some(
                        SemiColon,
                    ),
                },
            ),
        ],
        tok_r_brace: RBrace,
    },
}
