src/passes/snapshots/lumina2__passes__cst_gen__test__function_with_parameters.snap
---
source: src/passes/cst_gen.rs
expression: "fn some_function(a: u32, b: bool) {}"
---
FunctionDeclaration {
    tok_fn: Fn,
    name: Ident(
        "some_function",
    ),
    tok_l_parenthesis: LParenthesis,
    parameters: PunctuatedList {
        items: [
            FunctionParameter {
                name: Ident(
                    "a",
                ),
                tok_colon: Colon,
                ty: Named(
                    Ident(
                        "u32",
                    ),
                ),
            },
            FunctionParameter {
                name: Ident(
                    "b",
                ),
                tok_colon: Colon,
                ty: Named(
                    Ident(
                        "bool",
                    ),
                ),
            },
        ],
        punctuation: [
            Comma,
        ],
    },
    tok_r_parenthesis: RParenthesis,
    return_ty: None,
    body: Block {
        tok_l_brace: LBrace,
        statements: [],
        tok_r_brace: RBrace,
    },
}
