src/passes/snapshots/lumina2__passes__cst_gen__test__function_with_return.snap
---
source: src/passes/cst_gen.rs
expression: "fn some_function() -> u32 {}"
---
FunctionDeclaration {
    signature: FunctionSignature {
        tok_fn: Fn,
        name: Ident(
            "some_function",
        ),
        tok_l_parenthesis: LParenthesis,
        parameters: PunctuatedList {
            items: [],
            punctuation: [],
        },
        tok_r_parenthesis: RParenthesis,
        return_ty: Some(
            FunctionReturnType {
                tok_thin_arrow: ThinArrow,
                ty: Named(
                    Ident(
                        "u32",
                    ),
                ),
            },
        ),
    },
    body: Block {
        tok_l_brace: LBrace,
        statements: [],
        tok_r_brace: RBrace,
    },
}
