src/passes/snapshots/lumina2__passes__cst_gen__test__impl_trait_multiple.snap
---
source: src/passes/cst_gen.rs
expression: "impl MyTrait for SomeType { fn my_fn(n: usize) -> bool { true } fn another_fn() { } }"
---
TraitImplementation {
    tok_impl: Impl,
    name: Ident(
        "MyTrait",
    ),
    tok_for: For,
    ty: Named(
        Ident(
            "SomeType",
        ),
    ),
    tok_l_brace: LBrace,
    methods: [
        FunctionDeclaration {
            signature: FunctionSignature {
                tok_fn: Fn,
                name: Ident(
                    "my_fn",
                ),
                tok_l_parenthesis: LParenthesis,
                parameters: PunctuatedList {
                    items: [
                        FunctionParameter {
                            name: Ident(
                                "n",
                            ),
                            tok_colon: Colon,
                            ty: Named(
                                Ident(
                                    "usize",
                                ),
                            ),
                        },
                    ],
                    punctuation: [],
                },
                tok_r_parenthesis: RParenthesis,
                return_ty: Some(
                    FunctionReturnType {
                        tok_thin_arrow: ThinArrow,
                        ty: Named(
                            Ident(
                                "bool",
                            ),
                        ),
                    },
                ),
            },
            body: Block {
                tok_l_brace: LBrace,
                statements: [
                    Expression(
                        ExpressionStatement {
                            expression: Literal(
                                Boolean(
                                    True(
                                        True,
                                    ),
                                ),
                            ),
                            tok_semicolon: None,
                        },
                    ),
                ],
                tok_r_brace: RBrace,
            },
        },
        FunctionDeclaration {
            signature: FunctionSignature {
                tok_fn: Fn,
                name: Ident(
                    "another_fn",
                ),
                tok_l_parenthesis: LParenthesis,
                parameters: PunctuatedList {
                    items: [],
                    punctuation: [],
                },
                tok_r_parenthesis: RParenthesis,
                return_ty: None,
            },
            body: Block {
                tok_l_brace: LBrace,
                statements: [],
                tok_r_brace: RBrace,
            },
        },
    ],
    tok_r_brace: RBrace,
}
