src/passes/snapshots/lumina2__passes__cst_gen__test__impl_trait_single.snap
---
source: src/passes/cst_gen.rs
expression: "impl MyTrait for SomeType { fn my_fn() {} }"
---
TraitImplementation {
    tok_impl: Impl,
    name: Ident(
        "MyTrait",
    ),
    tok_for: For,
    ty: Named(
        Ident(
            "SomeType",
        ),
    ),
    tok_l_brace: LBrace,
    methods: [
        FunctionDeclaration {
            signature: FunctionSignature {
                tok_fn: Fn,
                name: Ident(
                    "my_fn",
                ),
                tok_l_parenthesis: LParenthesis,
                parameters: PunctuatedList {
                    items: [],
                    punctuation: [],
                },
                tok_r_parenthesis: RParenthesis,
                return_ty: None,
            },
            body: Block {
                tok_l_brace: LBrace,
                statements: [],
                tok_r_brace: RBrace,
            },
        },
    ],
    tok_r_brace: RBrace,
}
