src/passes/snapshots/lumina2__passes__cst_gen__test__no_value.snap
---
source: src/passes/cst_gen.rs
expression: "@some_annotation"
---
Annotation {
    tok_at: At,
    key: Ident(
        "some_annotation",
    ),
    value: None,
}
